# SCEG

./: SCEG.sln
SCEG/: .gitignore  CMakeLists.txt  Entity.h  ImageManager.cpp  ImageManager.h  Logger.cpp  Logger.h  Player.cpp  Pong  ResourceManager.h  SCEG.cpp  SCEG.h  SCEG.vcxproj  SCEG.vcxproj.filters  main.cpp
SCEG/include/: Entity.h  Logger.h  Player.h  Pong.h  ResourceManager.h  SCEG.h
SCEG/media/: .gdb_history
SCEG/src/: Logger.cpp  Pong.cpp  SCEG.cpp  main.cpp
